// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/monitoring/requestpanel/request should render 1`] = `
<div
  className="msla-panel-about-container"
>
  <div
    className="msla-panel-about-name"
  >
    <StyledLabelBase
      className="msla-panel-connector-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Connector",
            },
          ]
        }
        id="99vsJy"
      />
    </StyledLabelBase>
    <StyledLabelBase
      className="msla-panel-connector-name"
    >
      Not available
    </StyledLabelBase>
  </div>
  <div
    className="msla-panel-about-description"
  >
    <StyledLabelBase
      className="msla-panel-description-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Operation note",
            },
          ]
        }
        id="YHsAKl"
      />
    </StyledLabelBase>
    <div
      className="msla-panel-description"
    >
      <DocumentationItem />
    </div>
  </div>
  <div
    className="msla-panel-about-tags"
  >
    <StyledLabelBase
      className="msla-panel-tags-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Tags",
            },
          ]
        }
        id="TgcgXE"
      />
    </StyledLabelBase>
    <div
      className="msla-panel-tags"
    >
      None
    </div>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request should render a body 1`] = `
<div
  className="msla-panel-about-container"
>
  <div
    className="msla-panel-about-name"
  >
    <StyledLabelBase
      className="msla-panel-connector-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Connector",
            },
          ]
        }
        id="99vsJy"
      />
    </StyledLabelBase>
    <StyledLabelBase
      className="msla-panel-connector-name"
    >
      test
    </StyledLabelBase>
  </div>
  <div
    className="msla-panel-about-description"
  >
    <StyledLabelBase
      className="msla-panel-description-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Operation note",
            },
          ]
        }
        id="YHsAKl"
      />
    </StyledLabelBase>
    <div
      className="msla-panel-description"
    >
      <DocumentationItem
        description="This is a description "
      />
    </div>
  </div>
  <div
    className="msla-panel-about-tags"
  >
    <StyledLabelBase
      className="msla-panel-tags-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Tags",
            },
          ]
        }
        id="TgcgXE"
      />
    </StyledLabelBase>
    <div
      className="msla-panel-tags"
    >
      <React.Fragment>
        <div
          aria-label="test"
          className="msla-panel-tag"
          title="Tag1"
        >
          test
        </div>
        <div
          aria-label="more"
          className="msla-panel-tag"
          title="Tag2"
        >
          more
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request should render a description with external link 1`] = `
<div
  className="msla-panel-about-container"
>
  <div
    className="msla-panel-about-name"
  >
    <StyledLabelBase
      className="msla-panel-connector-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Connector",
            },
          ]
        }
        id="99vsJy"
      />
    </StyledLabelBase>
    <StyledLabelBase
      className="msla-panel-connector-name"
    >
      test
    </StyledLabelBase>
  </div>
  <div
    className="msla-panel-about-description"
  >
    <StyledLabelBase
      className="msla-panel-description-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Operation note",
            },
          ]
        }
        id="YHsAKl"
      />
    </StyledLabelBase>
    <div
      className="msla-panel-description"
    >
      <DocumentationItem
        description="This is a description "
        link={
          Object {
            "url": "www.microsoft.com",
            "urlDescription": "Learn more",
          }
        }
      />
    </div>
  </div>
  <div
    className="msla-panel-about-tags"
  >
    <StyledLabelBase
      className="msla-panel-tags-label"
      styles={
        Object {
          "root": Object {
            "fontSize": "14px",
          },
        }
      }
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage={
          Array [
            Object {
              "type": 0,
              "value": "Tags",
            },
          ]
        }
        id="TgcgXE"
      />
    </StyledLabelBase>
    <div
      className="msla-panel-tags"
    >
      <React.Fragment>
        <div
          aria-label="test"
          className="msla-panel-tag"
          title="Tag1"
        >
          test
        </div>
        <div
          aria-label="more"
          className="msla-panel-tag"
          title="Tag2"
        >
          more
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;
